# dataidea-webdev

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: CNAME  DEPLOYMENT.md  DEPLOYMENT_TROUBLESHOOTING.md  index.md
docs/CSS/: 01_introduction.md  02_syntax_and_selectors.md  03_colors_text_fonts.md  04_box_model_layout.md  05_flexbox.md  06_responsive_design.md
docs/Django/: 01_introduction.md  02_setup.md  03_models_databases.md  04_views_urls.md  05_templates.md  06_forms.md
docs/Python/: index.md
docs/overrides/: main.html
docs/overrides/stylesheets/: grayscale.css
docs/stylesheets/: grayscale.css
