[project]
name = "webdev"
version = "0.1.0"
description = ""
authors = [
    {name = "jumashafara",email = "jumashafara0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.7.1,<10.0.0",
    "mkdocs-jupyter>=0.24.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
